# ggci

./: .gitignore  .pylintrc  LICENSE  README.md  app.py  example_config.yaml  example_payload.json  pyproject.toml  pytest.ini
.github/workflows/: test.yml
ggci/: __init__.py  commons.py  config.py  forwarder.py  gitlab.py  google_chat.py
tests/: conftest.py  test_app.py  test_gitlab.py  test_google_chat.py  test_smoke.py
