[tool.poetry]
name = "ggci"
version = "0.1.2"
description = "GitLab Google Chat Integration"
authors = [
    "Jan Lukány <lukany.jan@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pyyaml = "^5.4.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "20.8b1"
pylint = "~2.6.0"
pytest = "~6.2.1"
pytest-cov = "~2.11.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
